# ragas_evaluator

./: .gitignore  main.py  pyproject.toml
.cursor/rules/: cursor-rules.mdc
notebooks/: experiment.ipynb
ragas_evaluation/faiss_index/: index.faiss  index.pkl
src/: setup_faiss_index.py
src/application/: conversation_logger.py  llm_service.py  prompts.py  ragas_evaluator.py
src/infrastructure/: pdf_parser.py  text_embedding_pipeline.py
