[project]
name = "ragas-evaluation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datasets>=3.4.0",
    "faiss-cpu>=1.10.0",
    "fastapi>=0.115.11",
    "langchain>=0.3.20",
    "langchain-openai>=0.3.8",
    "openai>=1.66.3",
    "pandas>=2.2.3",
    "pdfplumber>=0.11.5",
    "pypdf>=5.3.1",
    "ragas>=0.2.14",
    "sentence-transformers>=3.4.1",
    "tiktoken>=0.9.0",
    "torch>=2.6.0",
    "transformers>=4.49.0",
    "uvicorn>=0.34.0",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
]
