[project]
name = "ragas-evaluation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.10.16"
dependencies = [
    "langchain>=0.3.21",
    "langchain-community>=0.3.20",
    "loguru>=0.7.3",
    "numpy~=1.26.4",
    "pdfplumber>=0.11.5",
    "pydantic>=2.10.6",
    "pypdf>=5.4.0",
    "ragas>=0.2.14",
]

[dependency-groups]
dev = [
    "dotenv>=0.9.9",
    "faiss-cpu>=1.10.0",
    "ipykernel>=6.29.5",
    "langchain-openai>=0.3.9",
    "openai>=1.67.0",
    "pandas>=2.2.3",
]

[tool.ruff]
line-length = 119

[tool.ruff.lint]
# Never enforce `E501` (line length violations).
ignore = ["C901", "E501", "E741", "F402", "F823" ]
select = ["C", "E", "F", "I", "W"]

# Ignore import violations in all `__init__.py` files.
[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["E402", "F401", "F403", "F811"]
"src/transformers/file_utils.py" = ["F401"]
"src/transformers/utils/dummy_*.py" = ["F401"]

[tool.ruff.lint.isort]
lines-after-imports = 2
known-first-party = ["transformers"]

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"

[tool.pytest.ini_options]
doctest_optionflags="NUMBER NORMALIZE_WHITESPACE ELLIPSIS"
doctest_glob="**/*.md"
markers = [
    "flash_attn_test: marks tests related to flash attention (deselect with '-m \"not flash_attn_test\"')",
    "bitsandbytes: select (or deselect with `not`) bitsandbytes integration tests",
]

[tool.sqlfluff.core]
sql_file_exts = ".sql"
dialect = "snowflake"
max_line_length = 200
runaway_limit = 10
templater = "jinja"  # If using templating, otherwise remove this line
# exclude_rules = ["L010", "L014", "L032", "RF05"]  # Excluded based on industry best practices
exclude_rules = ["AL03", "AL04", "AL05", "AL06", "AL07", "AM01", "AM02", "AM03", "AM04", "AM06", "AM07", "CP03", "CV01",
                "CV02", "CV03", "CV04", "CV05", "CV06", "CV07", "CV08", "CV09", "CV10", "CV11", "L010",
                "L014", "L032", "LT01", "LT03", "LT07", "LT08", "LT12", "LT13", "RF01", "RF02", "RF03",
                "RF04", "RF05", "RF06", "ST01", "ST02", "ST03", "ST06", "ST07", "ST08", "TQ01"]
ignore = ["path/to/ignore/*.sql"]  # Example of ignoring specific paths
large_file_skip_byte_limit = 0

[tool.sqlfluff.layout.type.comma]
line_position = "leading"

[sqlfluff.rules.capitalisation.keywords]
capitalisation_policy = "upper"

[sqlfluff.rules.capitalisation.identifiers]
extended_capitalisation_policy = "lower"
unquoted_identifiers_policy = "all"

[sqlfluff.rules.capitalisation.functions]
extended_capitalisation_policy = "upper"

[sqlfluff.rules.capitalisation.literals]
capitalisation_policy = "upper"

[sqlfluff.rules.capitalisation.types]
extended_capitalisation_policy = "upper"

[sqlfluff.indentation]
tab_space_size = 4
indent_unit = "space"
indented_joins = false
indented_using_on = true
allow_implicit_indents = true
indented_on_contents = false
indented_ctes = false

[tool.sqlfluff.rules.ambiguous.column_references]  # Number in group by
group_by_and_order_by_style = "implicit"
